<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_tab"
        android:title="@string/tab_new"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_open"
        android:title="Abrir"
        android:icon="@android:drawable/ic_menu_upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_project_info"
        android:title="@string/menu_project_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_licenses"
        android:title="@string/menu_licenses"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy"
        android:title="@string/menu_privacy"
        app:showAsAction="never" />
</menu>
